@@ -7,6 +7,7 @@ import java.util.concurrent.atomic.AtomicInteger;
 
 import com.serotonin.m2m2.rt.dataImage.DataPointListener;
 import com.serotonin.m2m2.rt.dataImage.PointValueTime;
+import com.serotonin.m2m2.vo.DataPointVO;
 
 /**
  *
@@ -53,7 +54,7 @@ public class TestDataPointListener implements DataPointListener {
     }
 
     @Override
-    public void pointTerminated() {
+    public void pointTerminated(DataPointVO vo) {
         eventCount.incrementAndGet();
     }
 
